--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
     <script src="src/app/tools/nav_tools.js"></script>
     <script src="src/app/tools/ui_tools.js"></script>
     <script src="src/app/tools/basic_tools.js"></script>
+    <script src="src/app/tools/search_tools.js"></script>
     <script src="src/app/main.js"></script>
 
 </body>
