--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
     </div>
 
-    <!-- Time Machine Modal -->
+<!-- Time Machine Modal -->
     <div id="history-modal" class="fixed inset-0 bg-black/80 z-50 hidden flex items-center justify-center modal backdrop-blur-sm">
         <div class="bg-gray-800 rounded-lg shadow-2xl w-full max-w-md border border-gray-600 flex flex-col max-h-[80vh] modal-content">
             <div class="p-4 border-b border-gray-700 flex justify-between items-center bg-gray-800 rounded-t-lg">
@@ -259,7 +259,10 @@
                     <svg class="w-4 h-4 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                     Time Machine
                 </h3>
-                <button id="btn-close-modal" class="text-gray-400 hover:text-white transition">✕</button>
+                <div class="flex items-center gap-2">
+                    <button id="btn-delete-all-snapshots" class="text-[10px] text-red-400 hover:text-white bg-red-900/30 hover:bg-red-700 px-2 py-1 rounded border border-red-900/50 transition">Delete All</button>
+                    <button id="btn-close-modal" class="text-gray-400 hover:text-white transition w-6 h-6 flex items-center justify-center rounded hover:bg-gray-700">✕</button>
+                </div>
             </div>
             <div class="flex-1 overflow-y-auto p-4 space-y-2" id="snapshot-list">
                 <div class="text-center text-gray-500 text-xs py-4">No snapshots available.</div>
