--- a/index.html
+++ b/index.html
@@ -111,17 +111,33 @@
             </div>
 
             <!-- Storage & Download -->
-            <div class="p-2 px-3 border-b border-gray-700 flex justify-between items-center bg-gray-800/50">
-                <span class="text-[10px] font-bold text-gray-400 uppercase tracking-wider">Storage</span>
-                <div class="flex gap-1">
-                    <span id="save-status" class="text-[10px] text-gray-500 italic mr-2 self-center opacity-0 transition">Saved</span>
-                    <button id="btn-import-backup" title="Restore Backup" class="p-1 hover:bg-gray-700 rounded text-gray-400 hover:text-white transition">
-                        <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"></path></svg>
-                    </button>
-                    <input type="file" id="import-backup-input" class="hidden" accept=".bk,.zip">
-                    <button id="btn-download" title="Download Backup" class="p-1 hover:bg-gray-700 rounded text-gray-400 hover:text-white transition">
-                        <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
-                    </button>
+            <div class="py-3 px-4 border-b border-gray-700 bg-gray-800/50 flex flex-col gap-1.5">
+                <!-- 1. Header: Label & Value -->
+                <div class="flex justify-between items-baseline text-[10px]">
+                    <span class="font-bold text-gray-400 uppercase tracking-wider">Storage</span>
+                    <span id="storage-usage-text" class="font-mono text-gray-500">0.0 / 256.0 MB</span>
+                </div>
+                
+                <!-- 2. Progress Bar -->
+                <div class="relative w-full h-1 bg-gray-700 rounded-full overflow-hidden">
+                    <div id="storage-usage-bar" class="absolute top-0 left-0 h-full bg-blue-500 transition-all duration-500 ease-out" style="width: 0%"></div>
+                </div>
+
+                <!-- 3. Footer: Status & Actions -->
+                <div class="flex justify-between items-center h-4 mt-0.5">
+                    <!-- Save Status -->
+                    <span id="save-status" class="text-[9px] text-green-500 italic opacity-0 transition scale-90 origin-left">Saved</span>
+                    
+                    <!-- Action Buttons (Simple Icons) -->
+                    <div class="flex gap-3 text-gray-500">
+                        <input type="file" id="import-backup-input" class="hidden" accept=".bk,.zip">
+                        <button id="btn-import-backup" title="Restore Backup" class="hover:text-white transition transform hover:scale-105">
+                            <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"></path></svg>
+                        </button>
+                        <button id="btn-download" title="Download Backup" class="hover:text-white transition transform hover:scale-105">
+                            <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
+                        </button>
+                    </div>
                 </div>
             </div>
 
